fix card alignment

--- a/style/style.css
+++ b/style/style.css
@@ -10,24 +10,6 @@
   margin-left: -50px;
 }
 
-.resource-container {
-  overflow: hidden;
-  padding: 5px 15px 5px 0px;
-  overflow: hidden;
-  display: flex;
-  width: 46%;
-}
-.resource-container .resource-item {
-  flex: 1 1 calc(33% - 20px);
-  min-width: 250px;
-  box-sizing: border-box;
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #fff;
-  text-align: center;
-}
-
 .description {
   font-size: 14px;
   opacity: 0.5;
@@ -36,8 +18,6 @@
 #output {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  justify-content: start;
 }
 
 .category {
@@ -53,10 +33,9 @@
 }
 
 .favicon {
-  margin: 0px 20px 0px 0px;
-  width: 30px;
-  height: 30px;
-  margin-top: 25px;
+  margin: 0px 0px 5px 0px;
+  width: 35px;
+  height: 35px;
   -o-object-fit: contain;
      object-fit: contain;
 }/*# sourceMappingURL=style.css.map */
